--- a/index.html
+++ b/index.html
@@ -234,21 +234,24 @@
 					        </div>
 					    </div>
 					</section>
-				<ins class="klk-aff-widget"  data-wid="100300" data-height="340px"  data-adid="1134216" data-lang="vi" data-prod="search_vertical" data-currency="VND"><a href="//www.klook.com/?aid=">Klook.com</a></ins>
-					<script type="text/javascript">
-					(function (d, sc, u) {
-						var s = d.createElement(sc),
-						p = d.getElementsByTagName(sc)[0];
-						s.type = "text/javascript";
-						s.async = true;
-						s.src = u;
-						p.parentNode.insertBefore(s, p);
-					})(
-						document,
-						"script",
-						"https://affiliate.klook.com/widget/fetch-iframe-init.js"
-					);
-					</script>
+				<!-- Klook -->
+					<section id="tour" class="wrapper style1 align-center">
+					<ins class="klk-aff-widget"  data-wid="100300" data-height="340px"  data-adid="1134216" data-lang="vi" data-prod="search_vertical" data-currency="VND"><a href="//www.klook.com/?aid=">Klook.com</a></ins>
+						<script type="text/javascript">
+						(function (d, sc, u) {
+							var s = d.createElement(sc),
+							p = d.getElementsByTagName(sc)[0];
+							s.type = "text/javascript";
+							s.async = true;
+							s.src = u;
+							p.parentNode.insertBefore(s, p);
+						})(
+							document,
+							"script",
+							"https://affiliate.klook.com/widget/fetch-iframe-init.js"
+						);
+						</script>
+					</section>
 
 				<!-- Contact -->
 					<section id="contact" class="wrapper style1 align-center">
@@ -554,3 +557,4 @@
 
 	</body>
 </html>
+
