--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<title>Lazi Voyage - Blog Văn Hoá Việt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Lazi Voyage là blog văn hóa Việt, cung cấp cẩm nang du lịch, ẩm thực, lễ hội và tín ngưỡng Việt Nam. Khám phá bản sắc Việt qua hành trình chân thực.">
+		<meta name="keywords" content="văn hóa Việt, du lịch Việt Nam, ẩm thực Việt, lễ hội dân gian, blog văn hóa việt">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
@@ -556,5 +558,6 @@
 
 	</body>
 </html>
+
 
 
