--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Lazi Voyage là blog văn hóa Việt, cung cấp cẩm nang du lịch, ẩm thực, lễ hội và tín ngưỡng Việt Nam. Khám phá bản sắc Việt qua hành trình chân thực.">
 		<meta name="keywords" content="văn hóa Việt, du lịch Việt Nam, ẩm thực Việt, lễ hội dân gian, blog văn hóa việt">
+		<meta property="og:title" content="Lazi Voyage - Blog Văn Hóa Việt">
+		<meta property="og:description" content="Khám phá văn hóa Việt Nam qua các bài viết về du lịch, ẩm thực, lễ hội và tín ngưỡng tại Lazi Voyage.">
+		<meta property="og:image" content="https://lazivoyage.com/images/lazi-voyage/du-lich-vietnam.jpg">
+		<meta property="og:url" content="https://lazivoyage.com">
+		<meta property="og:type" content="website">
+		<meta property="og:site_name" content="Lazi Voyage">
+		<meta name="robots" content="index, follow">
+		<meta name="canonical" content="https://lazivoyage.com">
+		<meta name="geo.region" content="VN">
+		<meta name="geo.placename" content="Vietnam">
+		<meta name="geo.position" content="21.40784;105.19322">
+		<meta name="author" content="Lazi Voyage">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
@@ -558,6 +570,7 @@
 
 	</body>
 </html>
+
 
 
 
